--- a/reference-application/pyproject.toml
+++ b/reference-application/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "black>=25.1.0",
     "fastapi[standard]>=0.115.11",
+    "isort>=6.0.1",
     "llama-index>=0.12.23",
     "llama-index-vector-stores-postgres>=0.4.2",
     "pytest>=8.3.5",
