--- a/reference-application/pyproject.toml
+++ b/reference-application/pyproject.toml
@@ -11,3 +11,17 @@ dependencies = [
     "llama-index-vector-stores-postgres>=0.4.2",
     "pytest>=8.3.5",
 ]
+
+[tool.black]
+line-length = 88
+
+[tool.isort]
+profile = "black"
+filter_files = true
+atomic = true
+
+[tool.pytest.ini_options]
+addopts = "-s"
+log_cli_format = "%(asctime)s [%(levelname)8s] (%(name)s:%(filename)s:%(lineno)s) %(message)s"
+log_cli_level = "INFO"
+log_cli = true
