--- a/dbos-application/pyproject.toml
+++ b/dbos-application/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "reference-application"
+name = "dbos-application"
 version = "0.1.0"
 readme = "README.md"
 requires-python = ">=3.10"
