--- a/temporal-application/pyproject.toml
+++ b/temporal-application/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "llama-index>=0.12.23",
     "llama-index-vector-stores-postgres>=0.4.2",
     "pytest>=8.3.5",
+    "temporalio>=1.10.0",
 ]
 
 [tool.black]
